--- a/JavaApplication1/nbproject/private/private.properties
+++ b/JavaApplication1/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\sangh\\AppData\\Roaming\\NetBeans\\22\\build.properties
+user.properties.file=/Users/hoangminhsang/Library/Application Support/NetBeans/21/build.properties
