--- a/JavaApplication1/nbproject/project.properties
+++ b/JavaApplication1/nbproject/project.properties
@@ -34,13 +34,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Cafe
 excludes=
 file.reference.mssql-jdbc-12.6.1.jre11.jar=D:\\FPT Polytechnic\\JDBC\\sqljdbc_12.6\\enu\\jars\\mssql-jdbc-12.6.1.jre11.jar
+file.reference.mssql-jdbc-12.6.1.jre11.jar-1=/Users/hoangminhsang/Documents/JDBC/enu/jars/mssql-jdbc-12.6.1.jre11.jar
 file.reference.mssql-jdbc-12.6.1.jre8.jar=D:\\FPT Polytechnic\\JDBC\\sqljdbc_12.6\\enu\\jars\\mssql-jdbc-12.6.1.jre8.jar
+file.reference.mssql-jdbc-12.6.1.jre8.jar-1=/Users/hoangminhsang/Documents/JDBC/enu/jars/mssql-jdbc-12.6.1.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mssql-jdbc-12.6.1.jre11.jar}:\
-    ${file.reference.mssql-jdbc-12.6.1.jre8.jar}
+    ${file.reference.mssql-jdbc-12.6.1.jre8.jar}:\
+    ${file.reference.mssql-jdbc-12.6.1.jre11.jar-1}:\
+    ${file.reference.mssql-jdbc-12.6.1.jre8.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
